Fix paths and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,7 @@ header .menu-icon {
   height: 200px;
   position: absolute;
   right: 30%;
+  bottom: 30%;
  
 }
 
